// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar custom bullet case 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green300": "#A7E675",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.10.0",
        }
      }
    >
      <ForwardRef
        bullet="arrowRight"
        items={
          [
            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
            "Aenean euismod elementum nisi quis eleifend quam adipiscing.",
            "Aliquet porttitor lacus luctus accumsan tortor posuere ac.",
            "In fermentum posuere urna nec tincidunt.",
            "Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum.",
          ]
        }
        type="unordered"
        unStyled={false}
      >
        <ul
          className="HoiPoi__List__root-4-0 HoiPoi__List__unStyled-4-4"
        >
          <li
            className="HoiPoi__List__listItem-4-1 HoiPoi__List__withCustomBullet-4-5"
            key="dfdeb657-b9d9-48e6-8434-ac7e29827245"
          >
            <Component
              className="HoiPoi__List__bullet-4-3"
              color="#ff8c00"
              name="arrowRight"
            >
              <ForwardRef
                className="HoiPoi__List__bullet-4-3"
                color="#ff8c00"
                name="arrowRight"
                overrides={{}}
                size="medium"
              >
                <span
                  className="HoiPoi__Icon__root-4-6 HoiPoi__Icon__medium-4-8 HoiPoi__List__bullet-4-3"
                  onMouseDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onMouseUp={[Function]}
                >
                  <ArrowRight
                    color="#ff8c00"
                  >
                    <svg
                      viewBox="0 0 18 18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 9l1.058-1.058 4.192 4.185V3h1.5v9.127l4.193-4.185L15 9l-6 6z"
                        fill="#ff8c00"
                        fillRule="evenodd"
                        transform="rotate(-90) translate(-18, 0)"
                      />
                    </svg>
                  </ArrowRight>
                </span>
              </ForwardRef>
            </Component>
            <ForwardRef
              className="HoiPoi__List__text-4-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-4-14 HoiPoi__List__text-4-2 HoiPoi__Text__body-4-24"
                style={{}}
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
            </ForwardRef>
          </li>
          <li
            className="HoiPoi__List__listItem-4-1 HoiPoi__List__withCustomBullet-4-5"
            key="ee2a36d0-ab53-4aae-9ca0-ead1246b33b1"
          >
            <Component
              className="HoiPoi__List__bullet-4-3"
              color="#ff8c00"
              name="arrowRight"
            >
              <ForwardRef
                className="HoiPoi__List__bullet-4-3"
                color="#ff8c00"
                name="arrowRight"
                overrides={{}}
                size="medium"
              >
                <span
                  className="HoiPoi__Icon__root-4-6 HoiPoi__Icon__medium-4-8 HoiPoi__List__bullet-4-3"
                  onMouseDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onMouseUp={[Function]}
                >
                  <ArrowRight
                    color="#ff8c00"
                  >
                    <svg
                      viewBox="0 0 18 18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 9l1.058-1.058 4.192 4.185V3h1.5v9.127l4.193-4.185L15 9l-6 6z"
                        fill="#ff8c00"
                        fillRule="evenodd"
                        transform="rotate(-90) translate(-18, 0)"
                      />
                    </svg>
                  </ArrowRight>
                </span>
              </ForwardRef>
            </Component>
            <ForwardRef
              className="HoiPoi__List__text-4-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-4-14 HoiPoi__List__text-4-2 HoiPoi__Text__body-4-24"
                style={{}}
              >
                Aenean euismod elementum nisi quis eleifend quam adipiscing.
              </span>
            </ForwardRef>
          </li>
          <li
            className="HoiPoi__List__listItem-4-1 HoiPoi__List__withCustomBullet-4-5"
            key="8dea9254-0a16-4678-8162-f9385f07d713"
          >
            <Component
              className="HoiPoi__List__bullet-4-3"
              color="#ff8c00"
              name="arrowRight"
            >
              <ForwardRef
                className="HoiPoi__List__bullet-4-3"
                color="#ff8c00"
                name="arrowRight"
                overrides={{}}
                size="medium"
              >
                <span
                  className="HoiPoi__Icon__root-4-6 HoiPoi__Icon__medium-4-8 HoiPoi__List__bullet-4-3"
                  onMouseDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onMouseUp={[Function]}
                >
                  <ArrowRight
                    color="#ff8c00"
                  >
                    <svg
                      viewBox="0 0 18 18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 9l1.058-1.058 4.192 4.185V3h1.5v9.127l4.193-4.185L15 9l-6 6z"
                        fill="#ff8c00"
                        fillRule="evenodd"
                        transform="rotate(-90) translate(-18, 0)"
                      />
                    </svg>
                  </ArrowRight>
                </span>
              </ForwardRef>
            </Component>
            <ForwardRef
              className="HoiPoi__List__text-4-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-4-14 HoiPoi__List__text-4-2 HoiPoi__Text__body-4-24"
                style={{}}
              >
                Aliquet porttitor lacus luctus accumsan tortor posuere ac.
              </span>
            </ForwardRef>
          </li>
          <li
            className="HoiPoi__List__listItem-4-1 HoiPoi__List__withCustomBullet-4-5"
            key="e619e7fc-3843-415a-b67f-f462754a2726"
          >
            <Component
              className="HoiPoi__List__bullet-4-3"
              color="#ff8c00"
              name="arrowRight"
            >
              <ForwardRef
                className="HoiPoi__List__bullet-4-3"
                color="#ff8c00"
                name="arrowRight"
                overrides={{}}
                size="medium"
              >
                <span
                  className="HoiPoi__Icon__root-4-6 HoiPoi__Icon__medium-4-8 HoiPoi__List__bullet-4-3"
                  onMouseDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onMouseUp={[Function]}
                >
                  <ArrowRight
                    color="#ff8c00"
                  >
                    <svg
                      viewBox="0 0 18 18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 9l1.058-1.058 4.192 4.185V3h1.5v9.127l4.193-4.185L15 9l-6 6z"
                        fill="#ff8c00"
                        fillRule="evenodd"
                        transform="rotate(-90) translate(-18, 0)"
                      />
                    </svg>
                  </ArrowRight>
                </span>
              </ForwardRef>
            </Component>
            <ForwardRef
              className="HoiPoi__List__text-4-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-4-14 HoiPoi__List__text-4-2 HoiPoi__Text__body-4-24"
                style={{}}
              >
                In fermentum posuere urna nec tincidunt.
              </span>
            </ForwardRef>
          </li>
          <li
            className="HoiPoi__List__listItem-4-1 HoiPoi__List__withCustomBullet-4-5"
            key="7ab443ee-c85e-41cf-8531-d5908b5d3273"
          >
            <Component
              className="HoiPoi__List__bullet-4-3"
              color="#ff8c00"
              name="arrowRight"
            >
              <ForwardRef
                className="HoiPoi__List__bullet-4-3"
                color="#ff8c00"
                name="arrowRight"
                overrides={{}}
                size="medium"
              >
                <span
                  className="HoiPoi__Icon__root-4-6 HoiPoi__Icon__medium-4-8 HoiPoi__List__bullet-4-3"
                  onMouseDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onMouseUp={[Function]}
                >
                  <ArrowRight
                    color="#ff8c00"
                  >
                    <svg
                      viewBox="0 0 18 18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 9l1.058-1.058 4.192 4.185V3h1.5v9.127l4.193-4.185L15 9l-6 6z"
                        fill="#ff8c00"
                        fillRule="evenodd"
                        transform="rotate(-90) translate(-18, 0)"
                      />
                    </svg>
                  </ArrowRight>
                </span>
              </ForwardRef>
            </Component>
            <ForwardRef
              className="HoiPoi__List__text-4-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-4-14 HoiPoi__List__text-4-2 HoiPoi__Text__body-4-24"
                style={{}}
              >
                Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum.
              </span>
            </ForwardRef>
          </li>
        </ul>
      </ForwardRef>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Avatar default case 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green300": "#A7E675",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.10.0",
        }
      }
    >
      <ForwardRef
        items={
          [
            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
            "Aenean euismod elementum nisi quis eleifend quam adipiscing.",
            "Aliquet porttitor lacus luctus accumsan tortor posuere ac.",
            "In fermentum posuere urna nec tincidunt.",
            "Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum.",
          ]
        }
        type="unordered"
        unStyled={false}
      >
        <ul
          className="HoiPoi__List__root-1-0"
        >
          <li
            className="HoiPoi__List__listItem-1-1"
            key="264963f7-499f-4fd9-a08e-6886f0b83d41"
          >
            <ForwardRef
              className="HoiPoi__List__text-1-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-1-6 HoiPoi__List__text-1-2 HoiPoi__Text__body-1-16"
                style={{}}
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
            </ForwardRef>
          </li>
          <li
            className="HoiPoi__List__listItem-1-1"
            key="7e460d2b-bbbc-4a00-9aea-48d331c5f99a"
          >
            <ForwardRef
              className="HoiPoi__List__text-1-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-1-6 HoiPoi__List__text-1-2 HoiPoi__Text__body-1-16"
                style={{}}
              >
                Aenean euismod elementum nisi quis eleifend quam adipiscing.
              </span>
            </ForwardRef>
          </li>
          <li
            className="HoiPoi__List__listItem-1-1"
            key="dcb684fe-6d08-4fe0-b9a1-ccb9f00e9871"
          >
            <ForwardRef
              className="HoiPoi__List__text-1-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-1-6 HoiPoi__List__text-1-2 HoiPoi__Text__body-1-16"
                style={{}}
              >
                Aliquet porttitor lacus luctus accumsan tortor posuere ac.
              </span>
            </ForwardRef>
          </li>
          <li
            className="HoiPoi__List__listItem-1-1"
            key="5e02279d-a846-4cb0-86c1-17f7f9fbf3c0"
          >
            <ForwardRef
              className="HoiPoi__List__text-1-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-1-6 HoiPoi__List__text-1-2 HoiPoi__Text__body-1-16"
                style={{}}
              >
                In fermentum posuere urna nec tincidunt.
              </span>
            </ForwardRef>
          </li>
          <li
            className="HoiPoi__List__listItem-1-1"
            key="9480497a-f960-47c2-80b6-c59bbaa18084"
          >
            <ForwardRef
              className="HoiPoi__List__text-1-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-1-6 HoiPoi__List__text-1-2 HoiPoi__Text__body-1-16"
                style={{}}
              >
                Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum.
              </span>
            </ForwardRef>
          </li>
        </ul>
      </ForwardRef>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Avatar ordered list case 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green300": "#A7E675",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.10.0",
        }
      }
    >
      <ForwardRef
        items={
          [
            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
            "Aenean euismod elementum nisi quis eleifend quam adipiscing.",
            "Aliquet porttitor lacus luctus accumsan tortor posuere ac.",
            "In fermentum posuere urna nec tincidunt.",
            "Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum.",
          ]
        }
        type="ordered"
        unStyled={false}
      >
        <ol
          className="HoiPoi__List__root-2-0"
        >
          <li
            className="HoiPoi__List__listItem-2-1"
            key="a5fc2547-821a-4de0-aef2-158ab0d9129d"
          >
            <ForwardRef
              className="HoiPoi__List__text-2-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-2-6 HoiPoi__List__text-2-2 HoiPoi__Text__body-2-16"
                style={{}}
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
            </ForwardRef>
          </li>
          <li
            className="HoiPoi__List__listItem-2-1"
            key="522e63cc-e785-443f-a3f8-22e4cea8f6b7"
          >
            <ForwardRef
              className="HoiPoi__List__text-2-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-2-6 HoiPoi__List__text-2-2 HoiPoi__Text__body-2-16"
                style={{}}
              >
                Aenean euismod elementum nisi quis eleifend quam adipiscing.
              </span>
            </ForwardRef>
          </li>
          <li
            className="HoiPoi__List__listItem-2-1"
            key="9d761ea7-451b-4e58-a07e-b5628fb1d789"
          >
            <ForwardRef
              className="HoiPoi__List__text-2-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-2-6 HoiPoi__List__text-2-2 HoiPoi__Text__body-2-16"
                style={{}}
              >
                Aliquet porttitor lacus luctus accumsan tortor posuere ac.
              </span>
            </ForwardRef>
          </li>
          <li
            className="HoiPoi__List__listItem-2-1"
            key="0e0ff19f-7bea-472c-9765-f4723f4c561a"
          >
            <ForwardRef
              className="HoiPoi__List__text-2-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-2-6 HoiPoi__List__text-2-2 HoiPoi__Text__body-2-16"
                style={{}}
              >
                In fermentum posuere urna nec tincidunt.
              </span>
            </ForwardRef>
          </li>
          <li
            className="HoiPoi__List__listItem-2-1"
            key="c16047e4-bd1c-4b6f-be4e-3055d641a109"
          >
            <ForwardRef
              className="HoiPoi__List__text-2-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-2-6 HoiPoi__List__text-2-2 HoiPoi__Text__body-2-16"
                style={{}}
              >
                Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum.
              </span>
            </ForwardRef>
          </li>
        </ol>
      </ForwardRef>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Avatar unstyled case 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green300": "#A7E675",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.10.0",
        }
      }
    >
      <ForwardRef
        items={
          [
            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
            "Aenean euismod elementum nisi quis eleifend quam adipiscing.",
            "Aliquet porttitor lacus luctus accumsan tortor posuere ac.",
            "In fermentum posuere urna nec tincidunt.",
            "Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum.",
          ]
        }
        type="unordered"
        unStyled={true}
      >
        <ul
          className="HoiPoi__List__root-3-0 HoiPoi__List__unStyled-3-4"
        >
          <li
            className="HoiPoi__List__listItem-3-1"
            key="93e646d4-ef0c-4e62-9511-2ff682a081d6"
          >
            <ForwardRef
              className="HoiPoi__List__text-3-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-3-6 HoiPoi__List__text-3-2 HoiPoi__Text__body-3-16"
                style={{}}
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
            </ForwardRef>
          </li>
          <li
            className="HoiPoi__List__listItem-3-1"
            key="48272976-6013-4a5b-b390-6d71de02f349"
          >
            <ForwardRef
              className="HoiPoi__List__text-3-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-3-6 HoiPoi__List__text-3-2 HoiPoi__Text__body-3-16"
                style={{}}
              >
                Aenean euismod elementum nisi quis eleifend quam adipiscing.
              </span>
            </ForwardRef>
          </li>
          <li
            className="HoiPoi__List__listItem-3-1"
            key="934b6c10-2629-40cc-9aac-00896533cc52"
          >
            <ForwardRef
              className="HoiPoi__List__text-3-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-3-6 HoiPoi__List__text-3-2 HoiPoi__Text__body-3-16"
                style={{}}
              >
                Aliquet porttitor lacus luctus accumsan tortor posuere ac.
              </span>
            </ForwardRef>
          </li>
          <li
            className="HoiPoi__List__listItem-3-1"
            key="14ad7fa3-21ae-4664-a20e-c1f8103249b2"
          >
            <ForwardRef
              className="HoiPoi__List__text-3-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-3-6 HoiPoi__List__text-3-2 HoiPoi__Text__body-3-16"
                style={{}}
              >
                In fermentum posuere urna nec tincidunt.
              </span>
            </ForwardRef>
          </li>
          <li
            className="HoiPoi__List__listItem-3-1"
            key="31098f7d-e7b8-4923-9631-95755d00b233"
          >
            <ForwardRef
              className="HoiPoi__List__text-3-2"
              isTruncated={false}
              overrides={{}}
              type="body"
            >
              <span
                className="HoiPoi__Text__root-3-6 HoiPoi__List__text-3-2 HoiPoi__Text__body-3-16"
                style={{}}
              >
                Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum.
              </span>
            </ForwardRef>
          </li>
        </ul>
      </ForwardRef>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
